fix 'skip' button alignment

--- a/app/src/component/playlist/playlist.css
+++ b/app/src/component/playlist/playlist.css
@@ -12,10 +12,10 @@
 .playlist-bar {
   cursor: pointer;
   background-color: #444;
-  border-width: 1px;
   border-radius: 4px 4px 0 0;
   padding: 0;
   margin: 0;
+  line-height: 0;
 }
 .playlist-bar .btn {
   padding: 15px;
